ChangeLog for PyLint
====================

--
    * fix #3733: Messages (dis)appear depending on order of file names
    * fix #4026: pylint.el should require compile
    * implement #4012: flag back tick as deprecated (new W0333 message)


2007-06-07  --  0.13.2
    * fix disable-checker option so that it won't accidentally enable the
      rpython checker which is disabled by default
    * added note about the gedit plugin into documentation
	
2007-03-02  --  0.13.1
    * fix some unexplained 0.13.0 packaging issue which led a bunch of
      files missing from the distribution
	
2007-02-28  --  0.13.0
    * new RPython (Restricted Python) checker for PyPy felow or people
      wanting to get a compiled version of their python program using the
      translator of the PyPy project. For more information about PyPy or
      RPython, visit http://codespeak.net/pypy/
	
    * new E0104 and E0105 messages introduced to respectivly warn about
      "return" and "yield" outside function or method
    * new E0106 message when "yield" and "return something" are mixed in a
      function or method
    * new W0107 message for unnecessary pass statement
    * new W0614 message to differentiate between unused 'import X' and
      unused 'from X import *" (#3209, patch submitted by Daniel Drake)
    * included Daniel Drake's patch to have a different message E1003 instead of
      E1001 when a missing member is found but an inference failure has been 
      detected
	
    * msvs reporter for Visual Studio line number reporting (#3285)
	
    * allow disable-all option inline (#3218, patch submitted by Daniel Drake)
    * --init-hook option to call arbitray code necessary to set
      environment (eg sys.path) (#3156)
	
    * One more Daniel's patch fixing a command line option parsing
      problem, this'll definitly be the DDrake release :)
    * fix #3184: crashes on "return" outside function
    * fix #3205: W0704 false positive