@@ -5,7 +5,8 @@ ChangeLog for PyLint
     * fix #3733: Messages (dis)appear depending on order of file names
     * fix #4026: pylint.el should require compile
     * implement #4012: flag back tick as deprecated (new W0333 message)
-
+    * applied patch from Stefan Rank to avoid W0410 false positive when
+      multiple "from __future__" import statements
 
 2007-06-07  --  0.13.2
     * fix disable-checker option so that it won't accidentally enable the
@@ -13,7 +14,7 @@ ChangeLog for PyLint
     * added note about the gedit plugin into documentation
 	
 2007-03-02  --  0.13.1
-    * fix some unexplained 0.13.0 packaging issue which led a bunch of
+    * fix some unexplained 0.13.0 packaging issue which led to a bunch of
       files missing from the distribution
 	
 2007-02-28  --  0.13.0
